[gd_scene format=3 uid="uid://c4ruw5jpewww3"]

[ext_resource type="PackedScene" uid="uid://c6amc01xkkysk" path="res://scenes/characters/character.tscn" id="1_dplmw"]
[ext_resource type="Script" uid="uid://dq7bnj1eg7kda" path="res://scripts/test/scene_test.gd" id="1_oqoec"]

[node name="Scene" type="Node2D" unique_id=53717244]
script = ExtResource("1_oqoec")

[node name="Character" parent="." unique_id=1939404819 instance=ExtResource("1_dplmw")]
position = Vector2(185, 390)
nom_personnage = "Charlotte"
couleur_point = Color(0.19215687, 0.57254905, 1, 1)
competences = {
"creuser": 0.0,
"ecaille": 0.6,
"essence": 0.0,
"kidnapping": -0.4,
"saule": 0.0
}

[node name="Character2" parent="." unique_id=486234259 instance=ExtResource("1_dplmw")]
position = Vector2(394, 127)
nom_personnage = "LÃ©on"
couleur_point = Color(1, 0.22626406, 0.1713596, 1)
competences = {
"creuser": -0.5,
"ecaille": 0.0,
"essence": 0.0,
"kidnapping": 0.8,
"saule": 0.0
}

[node name="Character3" parent="." unique_id=729635431 instance=ExtResource("1_dplmw")]
position = Vector2(469, 341)
nom_personnage = "Maxime"
couleur_point = Color(0.05882353, 0.7647059, 0.18431373, 1)
competences = {
"creuser": 0.6,
"ecaille": 0.0,
"essence": 0.4,
"kidnapping": 0.0,
"saule": 0.0
}

[node name="UI" type="CanvasLayer" parent="." unique_id=838043804]

[node name="BoutonAvancer" type="Button" parent="UI" unique_id=244271444]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.5
offset_top = -115.0
offset_right = 84.5
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
text = "Avancer d'une heure"

[node name="DeckContainer" type="HBoxContainer" parent="UI" unique_id=177772946]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0

[node name="MessageInfo" type="Label" parent="UI" unique_id=705064382]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -103.0
offset_top = 10.0
offset_right = 103.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Cliquez sur un personnage"
